--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^1.0.0",
+    "ejs": "2.6.1",
     "express": "^4.16.4",
     "handlebars": "^4.0.10",
     "hbs": "^4.0.0",
